# Spotify-Induced-Music-Recommendation-AI

./: .coveragerc  .cursorrules  .env.example  .gitignore  Dockerfile  README.md  SIMRAI_design_plan.txt  TEST_RESULTS.md  package-lock.json  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run_all.cmd  run_cli.cmd
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md
dummy/: track_metadata_cli.py
pythontests/: test_ai_agents.py  test_api.py  test_cli.py  test_mood.py  test_oauth.py  test_oauth_flow.py  test_pipeline.py  test_playlist_operations.py  test_rate_limiting.py  test_security.py  test_spotify.py  test_user_operations.py
src/simrai/: __init__.py  agents.py  api.py  cli.py  config.py  mood.py  pipeline.py  spotify.py
web/: cypress.config.ts  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
web/cypress/e2e/: test_ui.cy.ts
web/src/: App.tsx  index.css  vite-env.d.ts
